--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,13 @@
           <p class="lead">System Engineer Infosys</p>
           <a class="lead" href="mailto:sreesreevisshnu@gmail.com" target="_blank">sreesreevisshnu@gmail.com</a>
            <p class="lead">+91 9952963948</p>
-          <a  data-toggle="modal" data-target="#exampleModalCenter" href="javascript:void(0)">View All Profiles</a>
-          <br>
-          <a href="./assets/SreeVishnu.pdf" target="_blank" download="SreeVishnu.pdf">Download Resume</a>
+<!-- Button trigger modal -->
+
+
+<a href="./assets/SreeVishnu.pdf" target="_blank" download="SreeVishnu.pdf">Download Resume</a>
+         &nbsp;
+<button mat-button mat-raised-button color="primary" (click)="openDialog()">View All Profiles</button>
+
         </div>
         <div class="col-sm-3 align-self-center">
           <img src="./assets/Img.jpeg" alt="Profile Pic" class=" imageStyle">
@@ -433,42 +437,7 @@
 </div>
 
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" >
-  Launch demo modal
-</button>
-
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle" class="list-header">Profile</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <img  src="./assets/HackerEarth_logo.png" class="sizeSet">&nbsp;
-            <a href="https://www.hackerearth.com/@vishcool" target="blank">https://www.hackerearth.com/@vishcool</a>
-          </li>
-          <li class="list-group-item">
-            <img src="./assets/github.png" class="sizeSet">&nbsp;
 
-            <a href="https://github.com/vishcool" target="blank">https://github.com/vishcool</a>
-          </li>        
-          
-          <li class="list-group-item">
-            <img src="./assets/linkedin.png" class="sizeSet">&nbsp;
 
-            <a href="https://www.linkedin.com/in/sree-vishnu-a5185b160/" target="blank">https://www.linkedin.com/in/sree-vishnu-a5185b160/</a>
-          </li>
-          
-        </ul>
-      </div>
-     
-    </div>
-  </div>
-</div>
+
