profile link changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
 <a href="./assets/SreeVishnu.pdf" target="_blank" download="SreeVishnu.pdf">Download Resume</a>
          &nbsp;
-<button mat-button mat-raised-button color="primary" (click)="openDialog()">View All Profiles</button>
+<a  href="javascript:void(0)" color="primary" (click)="openDialog()">View All Profiles</a>
 
         </div>
         <div class="col-sm-3 align-self-center">
